--- a/theme/static_src/package.json
+++ b/theme/static_src/package.json
@@ -16,16 +16,21 @@
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.13",
+    "animated-tailwindcss": "^4.0.0",
+    "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.38",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
     "postcss-simple-vars": "^7.0.1",
     "rimraf": "^5.0.5",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "dependencies": {
-    "flowbite": "^2.3.0"
+    "flowbite": "^2.3.0",
+    "tailwindcss-gradients": "^3.0.0"
   }
 }
