--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ asgiref==3.8.1
 beautifulsoup4==4.12.3
 binaryornot==0.4.4
 blinker==1.7.0
+borax==4.1.0
 certifi==2024.2.2
-channels==4.1.0
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
@@ -13,6 +13,7 @@ cookiecutter==2.6.0
 dash==2.9.3
 dash-bootstrap-components==1.6.0
 dash-core-components==2.0.0
+dash-holoniq-apexcharts==0.0.6
 dash-html-components==2.0.0
 dash-table==5.0.0
 defusedxml==0.7.1
@@ -25,9 +26,9 @@ django-extensions==3.2.3
 django-import-export==3.3.7
 django-node==4.0.2
 django-tailwind==3.8.0
-dpd_components==0.1.0
 et-xmlfile==1.1.0
 Flask==3.0.3
+htmlgenerator==1.2.30
 idna==3.7
 itsdangerous==2.1.2
 Jinja2==3.1.3
@@ -61,6 +62,7 @@ tablib==3.5.0
 tenacity==8.2.3
 text-unidecode==1.3
 types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.1
 Werkzeug==3.0.2
