--- a/theme/static_src/package.json
+++ b/theme/static_src/package.json
@@ -26,11 +26,13 @@
     "postcss-nested": "^6.0.1",
     "postcss-simple-vars": "^7.0.1",
     "rimraf": "^5.0.5",
-    "tailwindcss": "^3.4.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss": "^3.4.4"
   },
   "dependencies": {
+    "@canvasjs/charts": "^3.8.11",
+    "apexcharts": "^3.49.1",
     "flowbite": "^2.3.0",
+    "tailwindcss-animated": "^1.1.1",
     "tailwindcss-gradients": "^3.0.0"
   }
 }
